# my-postgres-utils

./: Cargo.toml
src/: bulk_delete_builder.rs  bulk_insert_builder.rs  delete_builder.rs  indexed_values_generator.rs  insert_builder.rs  insert_or_update.rs  lib.rs  numbered_params.rs  sql_line_builder.rs  sql_value.rs  update_builder.rs  where_builder.rs
src/delete/: bulk_delete_builder.rs  delete_builder.rs  delete_inner.rs  mod.rs
src/insert/: bulk_insert_builder.rs  insert_builder.rs  mod.rs
src/insert_or_update/: bulk_insert_or_update.rs  insert_or_update.rs  insert_or_update_inner.rs  mod.rs
src/update/: mod.rs  update_builder.rs
